--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-#kafka配置
-spring.kafka.bootstrap-servers=192.168.56.102:9092
-spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.group-id=local_test
+#kafka相关配置
+spring.kafka.bootstrap-servers=localhost:9092
+#设置一个默认组
+spring.kafka.consumer.group-id=defaultGroup
+#key-value序列化反序列化
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.acks=1
+spring.kafka.producer.batch-size=65536
+spring.kafka.producer.buffer-memory=524288
